--- a/សណ្ឋាគារ.html
+++ b/សណ្ឋាគារ.html
@@ -123,7 +123,7 @@
         <div class="line-triangle"></div>
       </div>
       <div class="row">
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
@@ -144,7 +144,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
@@ -163,7 +163,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
@@ -183,7 +183,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
@@ -204,7 +204,28 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/angkorwat1.jpg"
+              class="card-img-top"
+              height="310.5px"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body ">
+              <p class="card-title text-center">ប្រាសាទអង្គរវត្ត</p>
+              <p class="card-subtitle text-center">ខេត្តសៀមរាប</p>
+              <p class="card-description mt-3">
+                ប្រាសាទអង្គរវត្ត
+                ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។
+                ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត
+                និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។
+                ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
@@ -225,7 +246,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
@@ -246,7 +267,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
@@ -267,7 +288,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
@@ -288,7 +309,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
@@ -309,7 +330,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
@@ -330,28 +351,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4">
-          <div class="card" style="width: 100%">
-            <img
-              src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
-              alt="ព្រែកកាំពី"
-            />
-            <div class="card-body">
-              <p class="card-title text-center">ប្រាសាទអង្គរវត្ត</p>
-              <p class="card-subtitle text-center">ខេត្តសៀមរាប</p>
-              <p class="card-description mt-3">
-                ប្រាសាទអង្គរវត្ត
-                ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។
-                ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត
-                និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។
-                ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២។
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
