--- a/សណ្ឋាគារ.html
+++ b/សណ្ឋាគារ.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <nav id="menu-navbar">
-      <div id="navbar-content-wrapper">
+      <div id="navbar-content-wrapper" class="container-fluid">
         <div
           id="right-side-menu"
           class="d-flex justify-content-between align-items-center"
