--- a/សណ្ឋាគារ.html
+++ b/សណ្ឋាគារ.html
@@ -123,12 +123,14 @@
         <div class="line-triangle"></div>
       </div>
       <div class="row">
-        <div class="col-12 col-md-4 box hotel-post">
+        <div class="head">
+          <div><span>ខេត្ត/តំបន់</span></div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
               class="card-img-top"
-              height="310.5px"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -144,7 +146,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
@@ -163,7 +165,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
@@ -183,12 +185,11 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
               class="card-img-top"
-              height="310.5px"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
