--- a/សណ្ឋាគារ.html
+++ b/សណ្ឋាគារ.html
@@ -123,14 +123,16 @@
         <div class="line-triangle"></div>
       </div>
       <div class="row">
-        <div class="head">
-          <div><span>ខេត្ត/តំបន់</span></div>
+        <div class="col- box">
+          <div class="head-title-province">
+            <div><span>សៀមរាប</span></div>
+          </div>
         </div>
         <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
+              class="card-img-top" height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -150,7 +152,7 @@
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
-              class="card-img-top"
+              class="card-img-top"  height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -169,7 +171,7 @@
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
-              class="card-img-top"
+              class="card-img-top"  height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -189,7 +191,7 @@
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
+              class="card-img-top"  height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -205,33 +207,17 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
-          <div class="card" style="width: 100%">
-            <img
-              src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
-              alt="ព្រែកកាំពី"
-            />
-            <div class="card-body ">
-              <p class="card-title text-center">ប្រាសាទអង្គរវត្ត</p>
-              <p class="card-subtitle text-center">ខេត្តសៀមរាប</p>
-              <p class="card-description mt-3">
-                ប្រាសាទអង្គរវត្ត
-                ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។
-                ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត
-                និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។
-                ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២។
-              </p>
-            </div>
+        <!-- Next Province -->
+        <div class="col- box">
+          <div class="head-title-province">
+            <div><span>សៀមរាប</span></div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
+              class="card-img-top" height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -247,12 +233,50 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ភ្នំបូកគោ</p>
+              <p class="card-subtitle text-center">ខេត្តកំពត</p>
+              <p class="card-description mt-3">
+                ភ្នំបូកគោគឺជាឧទ្យានជាតិ នៅខេត្តកំពតភាគខាងត្បូងនៃប្រទេសកម្ពុជា។
+                វាត្រូវបានគេស្គាល់ផងដែរថាជា ឧទ្យានជាតិភ្នំបូកគោ។
+                ភ្នំបូកគោស្ថិតនៅក្នុងតំបន់ខ្ពង់រាប ដែលបង្កើតជាតំបន់ភាគអាគ្នេយ៍នៃ
+                ជួរភ្នំក្រវាញ ។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ឆ្នេរអូរឈើទាល</p>
+              <p class="card-subtitle text-center">ខេត្តព្រះសីហនុ</p>
+              <p class="card-description mt-3">
+                រមណីយដ្ឋានឆ្នេរអូរឈើទាល ស្ថិតនៅខេត្តព្រះសីហនុ ក្រុងព្រះសីហនុ
+                ជាតំបន់ទេសចរណ៏មួយ​
+                គួរជាទី​ចាប់អារម្មណ៏ំបំផុត​របស់ភ្ញៀវទេសចរណ៏ជាតិ និងអន្តរជាតិ​។​
+                ជារៀងរាល់ឆ្នាំ តែងតែមានភ្ញៀវទេសចរណ៏មក កំសាន្តនៅទីនេះ​
+                ច្រើនកុះករបំផុត មិនថាពេលមានបុណ្យទាន​ឬមានកម្មវិធីអ្វីក៏ដោយ​។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
+              class="card-img-top"  height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -268,12 +292,18 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <!-- Next Province -->
+
+        <div class="col- box">
+          <div class="head-title-province">
+            <div><span>សៀមរាប</span></div>
+          </div>
+        </div>        
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
+              class="card-img-top" height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -289,12 +319,50 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ភ្នំបូកគោ</p>
+              <p class="card-subtitle text-center">ខេត្តកំពត</p>
+              <p class="card-description mt-3">
+                ភ្នំបូកគោគឺជាឧទ្យានជាតិ នៅខេត្តកំពតភាគខាងត្បូងនៃប្រទេសកម្ពុជា។
+                វាត្រូវបានគេស្គាល់ផងដែរថាជា ឧទ្យានជាតិភ្នំបូកគោ។
+                ភ្នំបូកគោស្ថិតនៅក្នុងតំបន់ខ្ពង់រាប ដែលបង្កើតជាតំបន់ភាគអាគ្នេយ៍នៃ
+                ជួរភ្នំក្រវាញ ។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ឆ្នេរអូរឈើទាល</p>
+              <p class="card-subtitle text-center">ខេត្តព្រះសីហនុ</p>
+              <p class="card-description mt-3">
+                រមណីយដ្ឋានឆ្នេរអូរឈើទាល ស្ថិតនៅខេត្តព្រះសីហនុ ក្រុងព្រះសីហនុ
+                ជាតំបន់ទេសចរណ៏មួយ​
+                គួរជាទី​ចាប់អារម្មណ៏ំបំផុត​របស់ភ្ញៀវទេសចរណ៏ជាតិ និងអន្តរជាតិ​។​
+                ជារៀងរាល់ឆ្នាំ តែងតែមានភ្ញៀវទេសចរណ៏មក កំសាន្តនៅទីនេះ​
+                ច្រើនកុះករបំផុត មិនថាពេលមានបុណ្យទាន​ឬមានកម្មវិធីអ្វីក៏ដោយ​។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
+              class="card-img-top"  height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -310,12 +378,17 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <!-- Next province -->
+        <div class="col- box">
+          <div class="head-title-province">
+            <div><span>សៀមរាប</span></div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
+              class="card-img-top" height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -331,12 +404,50 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ភ្នំបូកគោ</p>
+              <p class="card-subtitle text-center">ខេត្តកំពត</p>
+              <p class="card-description mt-3">
+                ភ្នំបូកគោគឺជាឧទ្យានជាតិ នៅខេត្តកំពតភាគខាងត្បូងនៃប្រទេសកម្ពុជា។
+                វាត្រូវបានគេស្គាល់ផងដែរថាជា ឧទ្យានជាតិភ្នំបូកគោ។
+                ភ្នំបូកគោស្ថិតនៅក្នុងតំបន់ខ្ពង់រាប ដែលបង្កើតជាតំបន់ភាគអាគ្នេយ៍នៃ
+                ជួរភ្នំក្រវាញ ។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ឆ្នេរអូរឈើទាល</p>
+              <p class="card-subtitle text-center">ខេត្តព្រះសីហនុ</p>
+              <p class="card-description mt-3">
+                រមណីយដ្ឋានឆ្នេរអូរឈើទាល ស្ថិតនៅខេត្តព្រះសីហនុ ក្រុងព្រះសីហនុ
+                ជាតំបន់ទេសចរណ៏មួយ​
+                គួរជាទី​ចាប់អារម្មណ៏ំបំផុត​របស់ភ្ញៀវទេសចរណ៏ជាតិ និងអន្តរជាតិ​។​
+                ជារៀងរាល់ឆ្នាំ តែងតែមានភ្ញៀវទេសចរណ៏មក កំសាន្តនៅទីនេះ​
+                ច្រើនកុះករបំផុត មិនថាពេលមានបុណ្យទាន​ឬមានកម្មវិធីអ្វីក៏ដោយ​។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
+              class="card-img-top"  height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -352,12 +463,161 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 box hotel-post">
+        <!-- Next province -->
+        <div class="col- box">
+          <div class="head-title-province">
+            <div><span>សៀមរាប</span></div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
           <div class="card" style="width: 100%">
             <img
               src="images/Cambodia/angkorwat1.jpg"
-              class="card-img-top"
-              height="310.5px"
+              class="card-img-top" height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ប្រាសាទអង្គរវត្ត</p>
+              <p class="card-subtitle text-center">ខេត្តសៀមរាប</p>
+              <p class="card-description mt-3">
+                ប្រាសាទអង្គរវត្ត
+                ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។
+                ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត
+                និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។
+                ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ភ្នំបូកគោ</p>
+              <p class="card-subtitle text-center">ខេត្តកំពត</p>
+              <p class="card-description mt-3">
+                ភ្នំបូកគោគឺជាឧទ្យានជាតិ នៅខេត្តកំពតភាគខាងត្បូងនៃប្រទេសកម្ពុជា។
+                វាត្រូវបានគេស្គាល់ផងដែរថាជា ឧទ្យានជាតិភ្នំបូកគោ។
+                ភ្នំបូកគោស្ថិតនៅក្នុងតំបន់ខ្ពង់រាប ដែលបង្កើតជាតំបន់ភាគអាគ្នេយ៍នៃ
+                ជួរភ្នំក្រវាញ ។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ឆ្នេរអូរឈើទាល</p>
+              <p class="card-subtitle text-center">ខេត្តព្រះសីហនុ</p>
+              <p class="card-description mt-3">
+                រមណីយដ្ឋានឆ្នេរអូរឈើទាល ស្ថិតនៅខេត្តព្រះសីហនុ ក្រុងព្រះសីហនុ
+                ជាតំបន់ទេសចរណ៏មួយ​
+                គួរជាទី​ចាប់អារម្មណ៏ំបំផុត​របស់ភ្ញៀវទេសចរណ៏ជាតិ និងអន្តរជាតិ​។​
+                ជារៀងរាល់ឆ្នាំ តែងតែមានភ្ញៀវទេសចរណ៏មក កំសាន្តនៅទីនេះ​
+                ច្រើនកុះករបំផុត មិនថាពេលមានបុណ្យទាន​ឬមានកម្មវិធីអ្វីក៏ដោយ​។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/angkorwat1.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ប្រាសាទអង្គរវត្ត</p>
+              <p class="card-subtitle text-center">ខេត្តសៀមរាប</p>
+              <p class="card-description mt-3">
+                ប្រាសាទអង្គរវត្ត
+                ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។
+                ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត
+                និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។
+                ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២។
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- Next province -->
+        <div class="col- box">
+          <div class="head-title-province">
+            <div><span>សៀមរាប</span></div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/angkorwat1.jpg"
+              class="card-img-top" height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ប្រាសាទអង្គរវត្ត</p>
+              <p class="card-subtitle text-center">ខេត្តសៀមរាប</p>
+              <p class="card-description mt-3">
+                ប្រាសាទអង្គរវត្ត
+                ឬប្រាសាទអង្គរតូចមានទីតាំងស្ថិតនៅភាគខាងជើងនៃក្រុងសៀមរាបនៃខេត្តសៀមរាប។
+                ប្រាសាទអង្គរវត្តជាប្រាសាទព្រហ្មញ្ញសាសនាធំបំផុត
+                និងជាវិមានសាសនាដ៏ធំបំផុតនៅក្នុងលោក។
+                ប្រាសាទនេះត្រូវបានកសាងឡើងដោយព្រះបាទសូរ្យវរ្ម័នទី២។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ភ្នំបូកគោ.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ភ្នំបូកគោ</p>
+              <p class="card-subtitle text-center">ខេត្តកំពត</p>
+              <p class="card-description mt-3">
+                ភ្នំបូកគោគឺជាឧទ្យានជាតិ នៅខេត្តកំពតភាគខាងត្បូងនៃប្រទេសកម្ពុជា។
+                វាត្រូវបានគេស្គាល់ផងដែរថាជា ឧទ្យានជាតិភ្នំបូកគោ។
+                ភ្នំបូកគោស្ថិតនៅក្នុងតំបន់ខ្ពង់រាប ដែលបង្កើតជាតំបន់ភាគអាគ្នេយ៍នៃ
+                ជួរភ្នំក្រវាញ ។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/កន្លែងកំសាន្ដ/ព្រះសីហនុ/នេរអូរឈើទាល.jpg"
+              class="card-img-top"  height="100%"
+              alt="ព្រែកកាំពី"
+            />
+            <div class="card-body">
+              <p class="card-title text-center">ឆ្នេរអូរឈើទាល</p>
+              <p class="card-subtitle text-center">ខេត្តព្រះសីហនុ</p>
+              <p class="card-description mt-3">
+                រមណីយដ្ឋានឆ្នេរអូរឈើទាល ស្ថិតនៅខេត្តព្រះសីហនុ ក្រុងព្រះសីហនុ
+                ជាតំបន់ទេសចរណ៏មួយ​
+                គួរជាទី​ចាប់អារម្មណ៏ំបំផុត​របស់ភ្ញៀវទេសចរណ៏ជាតិ និងអន្តរជាតិ​។​
+                ជារៀងរាល់ឆ្នាំ តែងតែមានភ្ញៀវទេសចរណ៏មក កំសាន្តនៅទីនេះ​
+                ច្រើនកុះករបំផុត មិនថាពេលមានបុណ្យទាន​ឬមានកម្មវិធីអ្វីក៏ដោយ​។
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 box hotel-post">
+          <div class="card" style="width: 100%">
+            <img
+              src="images/Cambodia/angkorwat1.jpg"
+              class="card-img-top"  height="100%"
               alt="ព្រែកកាំពី"
             />
             <div class="card-body">
@@ -375,7 +635,6 @@
         </div>
       </div>
     </div>
-
     <footer>
       <div class="container">
         <div
