flight-schedule & about-us

--- a/សណ្ឋាគារ.html
+++ b/សណ្ឋាគារ.html
@@ -116,9 +116,9 @@
       <i class="fas fa-arrow-up"></i>
     </button>
     <div class="top-3-place container">
-      <p class="hotel-head-title text-center">
-        <span class="txt-top-place-title">សណ្ឋាគារ</span>
-      </p>
+      <div class="page-title text-center">
+        <p style="color: #CE3E3A;">សណ្ឋាគារ</p>
+      </div>
       <div class="under-line-triangle">
         <div class="line-triangle"></div>
       </div>
