--- a/flight_schedule.html
+++ b/flight_schedule.html
@@ -70,7 +70,7 @@
                 <li>សណ្ឋាគារ</li>
                 <li>រថយន្ត</li>
                 <li>រថយន្តក្រុង</li>
-                <li>ជើងហោះហើរ</li>
+                <li><a href="./flight_schedule.html">ជើងហោះហើរ</a></li>
                 <li>អាហារ</li>
                 </ul>
             </div>
@@ -87,7 +87,7 @@
                     placeholder="ស្វែងរកទីកម្សាន្តនានា"
                 />
                 </div>
-                <a href="" class="about-us">អំពីយើង</a>
+                <a href="./about_us.html" class="about-us">អំពីយើង</a>
                 <a href="" class="contact-us">ទំនាក់ទំនង់</a>
                 <!-- Theme mode Dark/Light -->
                 <input type="checkbox" name="theme-mode" id="theme-mode" />
@@ -108,8 +108,8 @@
             <div class="fight-schedule">
                 <div class="schedule-source"> សៀមរាប </div>
             </div>
-            <div class="schedule-table d-flex justify-content-center px-5">
-                <table class="table table-light table-hover">
+            <div class="schedule-table d-flex justify-content-center px-5 mt-4">
+                <table class="table table-hover table-bordered text-white custom-table">
                     <thead>
                         <tr> 
                             <td> ទីតាំងចេញដំណើរ </td>
@@ -127,10 +127,111 @@
                             <td> ៣០នាទី - ៤៥នាទី </td>
                             <td> A321/ATR72 </td>
                         </tr>
+                        <tr>
+                            <td> សៀមរាប </td>
+                            <td> ភ្នំពេញ </td>
+                            <td> រាល់ថ្ងៃ </td>
+                            <td> ៣០នាទី - ៤៥នាទី </td>
+                            <td> A321/ATR72 </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
+            <img src="./images/Ankor_Wat_temple.jpg" alt="" class="image-background">
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+        <div
+            class="footer-header d-flex justify-content-center align-items-center gap-4 py-4"
+        >
+            <span class="title-content cambodia">Cambodia</span>
+            <img
+            src="images/home_banner.jpg"
+            alt="banner"
+            class="footer-banner"
+            />
+            <span class="title-content travel" id="contact-footer">Travel</span>
+        </div>
+        <div class="footer-detail row p-5">
+            <div
+            class="col-12 col-md-6 left-side detail d-flex justify-content-center flex-column"
+            >
+            <div class="d-flex gap-3 mb-3">
+                <i
+                class="fa-solid fa-map-location"
+                style="width: 80px !important"
+                ></i>
+                <p class="m-0">
+                Royal University of Phnom Penh (RUPP) Russian Federation
+                Boulevard, Toul Kork, Phnom Penh, Cambodia
+                </p>
+            </div>
+            <div class="d-flex gap-3 mb-3">
+                <i class="fa-solid fa-phone"></i>
+                <p class="m-0">(+855) 96 xxx xxxx</p>
+            </div>
+            <div class="d-flex gap-3">
+                <i class="fa-solid fa-envelope"></i>
+                <p class="m-0">leamlisophara@gmail.com</p>
+            </div>
+            </div>
+            <div class="col-12 col-md-6 right-side detail">
+            <div class="open fw-bold footer-side-header">
+                <i class="fa-solid fa-clock"></i>OPENING HOUR
+            </div>
+            <div class="me-2 footer-descript">
+                <p>Monday - Saturday: 08:00AM ~ 05:30PM</p>
+                <p>Sunday: Closed</p>
+            </div>
+            <div class="follow-us fw-bold footer-side-header">
+                <i class="fa-solid fa-broadcast-tower"></i>Follow Us
+            </div>
+            <div class="social-media d-flex justify-content-center mt-3">
+                <div class="me-4">
+                <a href="#"
+                    ><i class="social-icon fa-brands fa-facebook"></i
+                ></a>
+                </div>
+                <div class="me-4">
+                <a href="#"
+                    ><i class="social-icon fa-brands fa-instagram"></i
+                ></a>
+                </div>
+                <div class="me-4">
+                <a href="#"><i class="social-icon fa-brands fa-twitter"></i></a>
+                </div>
+                <div class="me-4">
+                <a href="#"
+                    ><i class="social-icon fa-brands fa-telegram"></i
+                ></a>
+                </div>
+                <div class="me-4">
+                <a href="#"><i class="social-icon fa-brands fa-youtube"></i></a>
+                </div>
+                <div class="me-4">
+                <a href="#"><i class="social-icon fa-brands fa-tiktok"></i></a>
+                </div>
+            </div>
+            </div>
+        </div>
+        <div
+            class="footer-footer d-flex justify-content-between align-items-center py-4"
+        >
+            <span class="footer-footer-left d-flex align-items-center"
+            ><i class="fa-regular fa-copyright me-2"></i>Copyright
+            <a href="#" class="footer-footer-link ms-1"
+                >Cambodia Travel</a
+            ></span
+            >
+            <span class="footer-footer-right"
+            ><i class="fa-regular fa-copyright"></i>Designed by Niset RUPP - G5,
+            E8, Y4 Generation 23rd</span
+            >
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
