--- a/flight_schedule.html
+++ b/flight_schedule.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flight</title>
 
     <!-- Font Awesome -->
@@ -18,220 +18,222 @@
       rel="stylesheet"
       href="dist/bootstrap-5.2.1-dist/css/bootstrap.min.css"
     />
-
+    `
     <!-- Style -->
-    <link rel="stylesheet" href="./dist/style/style.css">
+    <link rel="stylesheet" href="./dist/style/style.css" />
     <script src="./dist/js/bootstrap/bootstrap.bundle.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <nav id="menu-navbar">
-        <div id="navbar-content-wrapper">
-            <div
-                id="right-side-menu"
-                class="d-flex justify-content-between align-items-center"
-            >
-                <a href="index.html" id="home">
-                <i class="fa-solid fa-house-chimney"></i>
-                </a>
-                <ul class="menu-list">
-                <li>
-                    ខេត្ត/តំបន់
-                    <div class="sub-menu-dropdown">
-                    <ul>
-                        <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
-                        <a href="បាត់ដំបង.html"><li>បាត់ដំបង</li></a>
-                        <a href="សៀមរាប.html"><li>សៀមរាប</li></a>
-                        <a href="ពោធិ៍សាត់.html"><li>ពោធិ៍សាត់</li></a>
-                        <a href="ព្រៃវែង.html"><li>ព្រៃវែង</li></a>
-                        <a href="ស្វាយរៀង.html"><li>ស្វាយរៀង</li></a>
-                        <a href="កំពង់ឆ្នាំង.html"><li>កំពង់ឆ្នាំង</li></a>
-                        <a href="កំពត.html"><li>កំពត</li></a>
-                        <a href="កំពង់ធំ.html"><li>កំពង់ធំ</li></a>
-                        <a href="តាកែវ.html"><li>តាកែវ</li></a>
-                        <a href="មណ្ឌលគិរី.html"><li>មណ្ដលគិរី</li></a>
-                        <a href="រតនៈគិរី.html"><li>រតនៈគិរី</li></a>
-                        <a href="ឧត្ដមានជ័យ.html"><li>ឧត្ដមានជ័យ</li></a>
-                        <a href="កែប.html"><li>កែប</li></a>
-                        <a href="ស្ទឹងត្រែង.html"><li>ស្ទឹងត្រែង</li></a>
-                        <a href="ព្រះវិហារ.html"><li>ព្រះវិហារ</li></a>
-                        <a href="កោះកុង.html"><li>កោះកុង</li></a>
-                        <a href="ព្រះសីហនុ.html"><li>ព្រះសីហនុ</li></a>
-                        <a href="កំពង់ស្ពឺ.html"><li>កំពង់ស្ពឺ</li></a>
-                        <a href="កំពង់ចាម.html"><li>កំពង់ចាម</li> </a>
-                        <a href="បន្ទាយមានជ័យ.html"><li>បន្ទាយមានជ័យ</li></a>
-                        <a href="កណ្ដាល.html"><li>កណ្ដាល</li></a>
-                        <a href="ក្រចេះ.html"><li>ក្រចេះ</li></a>
-                        <a href="ប៉ៃលិន.html"><li>ប៉ៃលិន</li></a>
-                        <a href="ត្បូងឃ្មុំ.html"><li>ត្បូងឃ្មុំ</li></a>
-                        <a href="ស្វាយ.html"><li>ស្វាយ</li></a>
-                    </ul>
-                    </div>
-                </li>
-                <li>សណ្ឋាគារ</li>
-                <li>រថយន្ត</li>
-                <li>រថយន្តក្រុង</li>
-                <li><a href="./flight_schedule.html">ជើងហោះហើរ</a></li>
-                <li>អាហារ</li>
+      <div id="navbar-content-wrapper">
+        <div
+          id="right-side-menu"
+          class="d-flex justify-content-between align-items-center"
+        >
+          <a href="index.html" id="home">
+            <i class="fa-solid fa-house-chimney"></i>
+          </a>
+          <ul class="menu-list">
+            <li>
+              ខេត្ត/តំបន់
+              <div class="sub-menu-dropdown">
+                <ul>
+                  <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
+                  <a href="បាត់ដំបង.html"><li>បាត់ដំបង</li></a>
+                  <a href="សៀមរាប.html"><li>សៀមរាប</li></a>
+                  <a href="ពោធិ៍សាត់.html"><li>ពោធិ៍សាត់</li></a>
+                  <a href="ព្រៃវែង.html"><li>ព្រៃវែង</li></a>
+                  <a href="ស្វាយរៀង.html"><li>ស្វាយរៀង</li></a>
+                  <a href="កំពង់ឆ្នាំង.html"><li>កំពង់ឆ្នាំង</li></a>
+                  <a href="កំពត.html"><li>កំពត</li></a>
+                  <a href="កំពង់ធំ.html"><li>កំពង់ធំ</li></a>
+                  <a href="តាកែវ.html"><li>តាកែវ</li></a>
+                  <a href="មណ្ឌលគិរី.html"><li>មណ្ដលគិរី</li></a>
+                  <a href="រតនៈគិរី.html"><li>រតនៈគិរី</li></a>
+                  <a href="ឧត្ដមានជ័យ.html"><li>ឧត្ដមានជ័យ</li></a>
+                  <a href="កែប.html"><li>កែប</li></a>
+                  <a href="ស្ទឹងត្រែង.html"><li>ស្ទឹងត្រែង</li></a>
+                  <a href="ព្រះវិហារ.html"><li>ព្រះវិហារ</li></a>
+                  <a href="កោះកុង.html"><li>កោះកុង</li></a>
+                  <a href="ព្រះសីហនុ.html"><li>ព្រះសីហនុ</li></a>
+                  <a href="កំពង់ស្ពឺ.html"><li>កំពង់ស្ពឺ</li></a>
+                  <a href="កំពង់ចាម.html"><li>កំពង់ចាម</li> </a>
+                  <a href="បន្ទាយមានជ័យ.html"><li>បន្ទាយមានជ័យ</li></a>
+                  <a href="កណ្ដាល.html"><li>កណ្ដាល</li></a>
+                  <a href="ក្រចេះ.html"><li>ក្រចេះ</li></a>
+                  <a href="ប៉ៃលិន.html"><li>ប៉ៃលិន</li></a>
+                  <a href="ត្បូងឃ្មុំ.html"><li>ត្បូងឃ្មុំ</li></a>
+                  <a href="ស្វាយ.html"><li>ស្វាយ</li></a>
                 </ul>
-            </div>
-            <img id="angkor-logo" src="images/angkor_wat_logo.png" alt="Cambodia" />
-            <div
-                id="left-side-menu"
-                class="d-flex justify-content-between align-items-center"
-            >
-                <div class="search-place-wrapper">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input
-                    type="text"
-                    class="search-place-input"
-                    placeholder="ស្វែងរកទីកម្សាន្តនានា"
-                />
-                </div>
-                <a href="./about_us.html" class="about-us">អំពីយើង</a>
-                <a href="" class="contact-us">ទំនាក់ទំនង់</a>
-                <!-- Theme mode Dark/Light -->
-                <input type="checkbox" name="theme-mode" id="theme-mode" />
-                <label for="theme-mode"> </label>
-            </div>
+              </div>
+            </li>
+            <li>សណ្ឋាគារ</li>
+            <li>រថយន្ត</li>
+            <li>រថយន្តក្រុង</li>
+            <li><a href="./flight_schedule.html">ជើងហោះហើរ</a></li>
+            <li>អាហារ</li>
+          </ul>
         </div>
+        <img id="angkor-logo" src="images/angkor_wat_logo.png" alt="Cambodia" />
+        <div
+          id="left-side-menu"
+          class="d-flex justify-content-between align-items-center"
+        >
+          <div class="search-place-wrapper">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input
+              type="text"
+              class="search-place-input"
+              placeholder="ស្វែងរកទីកម្សាន្តនានា"
+            />
+          </div>
+          <a href="./about_us.html" class="about-us">អំពីយើង</a>
+          <a href="" class="contact-us">ទំនាក់ទំនង់</a>
+          <!-- Theme mode Dark/Light -->
+          <input type="checkbox" name="theme-mode" id="theme-mode" />
+          <label for="theme-mode"> </label>
+        </div>
+      </div>
     </nav>
 
     <div class="container">
-        <div class="page-title text-center">
-            <p style="color: #CE3E3A;">ជើងហោះហើរ</p>
+      <div class="page-title text-center">
+        <p style="color: #ce3e3a">ជើងហោះហើរ</p>
+      </div>
+      <div class="under-line-triangle">
+        <div class="line-triangle"></div>
+      </div>
+
+      <div class="schedule-wrapper">
+        <div class="fight-schedule">
+          <div class="schedule-source">សៀមរាប</div>
         </div>
-        <div class="under-line-triangle">
-            <div class="line-triangle"></div>
+        <div class="schedule-table d-flex justify-content-center px-5 mt-4">
+          <table
+            class="table table-hover table-bordered text-white custom-table"
+          >
+            <thead>
+              <tr>
+                <td>ទីតាំងចេញដំណើរ</td>
+                <td>គោលដៅ</td>
+                <td>ប្រេកង់ហោះហើរ</td>
+                <td>រយៈពេលហោះហើរ</td>
+                <td>យន្តហោះ</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>សៀមរាប</td>
+                <td>ភ្នំពេញ</td>
+                <td>រាល់ថ្ងៃ</td>
+                <td>៣០នាទី - ៤៥នាទី</td>
+                <td>A321/ATR72</td>
+              </tr>
+              <tr>
+                <td>សៀមរាប</td>
+                <td>ភ្នំពេញ</td>
+                <td>រាល់ថ្ងៃ</td>
+                <td>៣០នាទី - ៤៥នាទី</td>
+                <td>A321/ATR72</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-    
-        <div class="schedule-wrapper">
-            <div class="fight-schedule">
-                <div class="schedule-source"> សៀមរាប </div>
-            </div>
-            <div class="schedule-table d-flex justify-content-center px-5 mt-4">
-                <table class="table table-hover table-bordered text-white custom-table">
-                    <thead>
-                        <tr> 
-                            <td> ទីតាំងចេញដំណើរ </td>
-                            <td> គោលដៅ </td>
-                            <td> ប្រេកង់ហោះហើរ </td>
-                            <td> រយៈពេលហោះហើរ </td>
-                            <td> យន្តហោះ </td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td> សៀមរាប </td>
-                            <td> ភ្នំពេញ </td>
-                            <td> រាល់ថ្ងៃ </td>
-                            <td> ៣០នាទី - ៤៥នាទី </td>
-                            <td> A321/ATR72 </td>
-                        </tr>
-                        <tr>
-                            <td> សៀមរាប </td>
-                            <td> ភ្នំពេញ </td>
-                            <td> រាល់ថ្ងៃ </td>
-                            <td> ៣០នាទី - ៤៥នាទី </td>
-                            <td> A321/ATR72 </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <img src="./images/Ankor_Wat_temple.jpg" alt="" class="image-background">
-        </div>
+        <!-- <img src="./images/Ankor_Wat_temple.jpg" alt="" class="image-background"> -->
+      </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        <div class="container">
+      <div class="container">
         <div
-            class="footer-header d-flex justify-content-center align-items-center gap-4 py-4"
+          class="footer-header d-flex justify-content-center align-items-center gap-4 py-4"
         >
-            <span class="title-content cambodia">Cambodia</span>
-            <img
+          <span class="title-content cambodia">Cambodia</span>
+          <img
             src="images/home_banner.jpg"
             alt="banner"
             class="footer-banner"
-            />
-            <span class="title-content travel" id="contact-footer">Travel</span>
+          />
+          <span class="title-content travel" id="contact-footer">Travel</span>
         </div>
         <div class="footer-detail row p-5">
-            <div
+          <div
             class="col-12 col-md-6 left-side detail d-flex justify-content-center flex-column"
-            >
+          >
             <div class="d-flex gap-3 mb-3">
-                <i
+              <i
                 class="fa-solid fa-map-location"
                 style="width: 80px !important"
-                ></i>
-                <p class="m-0">
+              ></i>
+              <p class="m-0">
                 Royal University of Phnom Penh (RUPP) Russian Federation
                 Boulevard, Toul Kork, Phnom Penh, Cambodia
-                </p>
+              </p>
             </div>
             <div class="d-flex gap-3 mb-3">
-                <i class="fa-solid fa-phone"></i>
-                <p class="m-0">(+855) 96 xxx xxxx</p>
+              <i class="fa-solid fa-phone"></i>
+              <p class="m-0">(+855) 96 xxx xxxx</p>
             </div>
             <div class="d-flex gap-3">
-                <i class="fa-solid fa-envelope"></i>
-                <p class="m-0">leamlisophara@gmail.com</p>
+              <i class="fa-solid fa-envelope"></i>
+              <p class="m-0">leamlisophara@gmail.com</p>
             </div>
-            </div>
-            <div class="col-12 col-md-6 right-side detail">
+          </div>
+          <div class="col-12 col-md-6 right-side detail">
             <div class="open fw-bold footer-side-header">
-                <i class="fa-solid fa-clock"></i>OPENING HOUR
+              <i class="fa-solid fa-clock"></i>OPENING HOUR
             </div>
             <div class="me-2 footer-descript">
-                <p>Monday - Saturday: 08:00AM ~ 05:30PM</p>
-                <p>Sunday: Closed</p>
+              <p>Monday - Saturday: 08:00AM ~ 05:30PM</p>
+              <p>Sunday: Closed</p>
             </div>
             <div class="follow-us fw-bold footer-side-header">
-                <i class="fa-solid fa-broadcast-tower"></i>Follow Us
+              <i class="fa-solid fa-broadcast-tower"></i>Follow Us
             </div>
             <div class="social-media d-flex justify-content-center mt-3">
-                <div class="me-4">
+              <div class="me-4">
                 <a href="#"
-                    ><i class="social-icon fa-brands fa-facebook"></i
+                  ><i class="social-icon fa-brands fa-facebook"></i
                 ></a>
-                </div>
-                <div class="me-4">
+              </div>
+              <div class="me-4">
                 <a href="#"
-                    ><i class="social-icon fa-brands fa-instagram"></i
+                  ><i class="social-icon fa-brands fa-instagram"></i
                 ></a>
-                </div>
-                <div class="me-4">
+              </div>
+              <div class="me-4">
                 <a href="#"><i class="social-icon fa-brands fa-twitter"></i></a>
-                </div>
-                <div class="me-4">
+              </div>
+              <div class="me-4">
                 <a href="#"
-                    ><i class="social-icon fa-brands fa-telegram"></i
+                  ><i class="social-icon fa-brands fa-telegram"></i
                 ></a>
-                </div>
-                <div class="me-4">
+              </div>
+              <div class="me-4">
                 <a href="#"><i class="social-icon fa-brands fa-youtube"></i></a>
-                </div>
-                <div class="me-4">
+              </div>
+              <div class="me-4">
                 <a href="#"><i class="social-icon fa-brands fa-tiktok"></i></a>
-                </div>
+              </div>
             </div>
-            </div>
+          </div>
         </div>
         <div
-            class="footer-footer d-flex justify-content-between align-items-center py-4"
+          class="footer-footer d-flex justify-content-between align-items-center py-4"
         >
-            <span class="footer-footer-left d-flex align-items-center"
+          <span class="footer-footer-left d-flex align-items-center"
             ><i class="fa-regular fa-copyright me-2"></i>Copyright
             <a href="#" class="footer-footer-link ms-1"
-                >Cambodia Travel</a
+              >Cambodia Travel</a
             ></span
-            >
-            <span class="footer-footer-right"
+          >
+          <span class="footer-footer-right"
             ><i class="fa-regular fa-copyright"></i>Designed by Niset RUPP - G5,
             E8, Y4 Generation 23rd</span
-            >
+          >
         </div>
-        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
