--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
       <span class="scroll_span"></span>
       <p>scroll down</p>
     </div>
-    <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
+    <button
+      type="button"
+      class="btn btn-danger btn-floating btn-lg"
+      id="btn-back-to-top"
+    >
       <i class="fas fa-arrow-up"></i>
     </button>
     <div class="travel-guide-container">
@@ -163,10 +167,10 @@
           </div>
           <div class="area d-flex">
             <div class="col-">
-              <img src="images/Cambodia/កោះកុង.jpg" alt="">
+              <img src="images/Cambodia/កោះកុង.jpg" alt="" />
             </div>
             <div class="area-description">
-                <a class="area-title" href="កោះកុង.html">កោះកុង</a>
+              <a class="area-title" href="កោះកុង.html">កោះកុង</a>
               <p class="area-short-description">
                 អង្គរវត្ត ឬប្រាសាទអង្គរតូច មានទីតាំងស្ថិតនៅភាគខាងជើងនៃ
                 ក្រុងសៀមរាប នៃខេត្តសៀមរាប ដែលមានចម្ងាយ ៧គីឡូម៉ែត្រពីទីរួម
