--- a/seemore.html
+++ b/seemore.html
@@ -96,7 +96,7 @@
           <div><span>ខេត្ត/តំបន់</span></div>
         </div>
         <div class="area col-6 d-flex">
-          <div class="col-">
+          <div class="col-" style="transition: 0.5s ease-in-out;"> 
             <img src="images/Ankor_Wat_temple.jpg" alt="">
           </div>
           <div class="area-description">
