--- a/Demo_aboutus.html
+++ b/Demo_aboutus.html
@@ -93,179 +93,36 @@
       <!--Content Post-->
       <div class="content-post container">
          <div class="row">
-            <div class="col-8 text-aboutus">
-                <p class="text-aboutus">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>\
-                <p class="text-aboutus">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-aboutus">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p><p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p><p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>\
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p><p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p><p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>\
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p><p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p><p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>\
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p><p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
-
-                <p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p><p class="text-description-header">ព្រះបរមរាជាវាំង​ នៃព្រះរាជាណាចក្រកម្ពុជា</p>
+            <div class="col-8">
+               <div class="text-aboutus">
+                  <p class="text-aboutus-title">ឈ្មោះ រី គីមណាង</p>
+                  <p class="">អភិវឌ្ឍរទៅ លើផ្នែក ផេកមួយចំនួន</p>\
+               </div>
+               <div class="text-aboutus">
+                  <p class="text-aboutus-title">ឈ្មោះ ថាន់ គីមហុង</p>
+                  <p class="">អភិវឌ្ឍរទៅ លើផ្នែក ផេកមួយចំនួន</p>\
+               </div>
+               <div class="text-aboutus">
+                  <p class="text-aboutus-title">ឈ្មោះ យន រីសា</p>
+                  <p class="">អភិវឌ្ឍរទៅ លើផ្នែក ផេកមួយចំនួន</p>\
+               </div>
+               <div class="text-aboutus">
+                  <p class="text-aboutus-title">ឈ្មោះ លៀម លីសុផារ៉ា</p>
+                  <p class="">អភិវឌ្ឍរទៅ លើផ្នែក ផេកមួយចំនួន</p>\
+               </div>
+                
             </div>
             <div class="col-4">
                 <img class="img-content-post fiximg" src="images/k_profile.jpg"/>
-                <img class="img-content-post fiximg" src="images/Cambodia/កោះកុង.jpg"/>
-                <img class="img-content-post fiximg" src="images/preloader.gif"/>
+                <img class="img-content-post fiximg" src="images/Kimhong.jpg"/>
+                <img class="img-content-post fiximg" src="images/Riza.jpg"/>
+                <img class="img-content-post fiximg" src="images/Phara.jpg"/>
             </div>
          </div>
       </div>
       <button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
          <i class="fas fa-arrow-up"></i>
        </button>
-      <footer>
-         <div class="container">
-            <div class="footer-header d-flex justify-content-center align-items-center gap-4 py-4">
-               <span class="title-content cambodia">Cambodia</span>
-               <img src="images/home_banner.jpg" alt="banner" class="footer-banner">
-               <span class="title-content travel">Travel</span>
-            </div>
-            <div class="footer-detail row p-5">
-               <div class="col-12 col-md-6 left-side detail d-flex justify-content-center flex-column">
-                  <div class="d-flex gap-3 mb-3">
-                     <i class="fa-solid fa-map-location" style="width:80px !important;"></i>
-                     <p class="m-0">Royal University of Phnom Penh (RUPP)
-                        Russian Federation Boulevard, Toul Kork,
-                        Phnom Penh, Cambodia
-                     </p>
-                  </div>
-                  <div class="d-flex gap-3 mb-3">
-                     <i class="fa-solid fa-phone"></i>
-                     <p class="m-0">(+855) 96 xxx xxxx</p>
-                  </div>
-                  <div class="d-flex gap-3">
-                     <i class="fa-solid fa-envelope"></i>
-                     <p class="m-0">leamlisophara@gmail.com</p>
-                  </div>
-               </div>
-               <div class="col-12 col-md-6 right-side detail">
-                  <div class="open fw-bold footer-side-header"><i class="fa-solid fa-clock"></i>OPENING HOUR</div>
-                  <div class="me-2 footer-descript">
-                     <p>
-                        Monday - Saturday: 08:00AM ~ 05:30PM
-                     </p>
-                     <p>
-                        Sunday: Closed
-                     </p>
-                  </div>
-                  <div class="follow-us fw-bold footer-side-header"><i class="fa-solid fa-broadcast-tower"></i>Follow Us</div>
-                  <div class="social-media d-flex justify-content-center mt-3">
-                     <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-facebook"></i></a></div>
-                     <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-instagram"></i></a></div>
-                     <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-twitter"></i></a></div>
-                     <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-telegram"></i></a></div>
-                     <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-youtube"></i></a></div>
-                     <div class="me-4"><a href="#"><i class="social-icon fa-brands fa-tiktok"></i></a></div>
-                  </div>
-               </div>
-            </div>
-            <div class="footer-footer d-flex justify-content-between align-items-center py-4">
-               <span class="footer-footer-left d-flex align-items-center"><i class="fa-regular fa-copyright me-2"></i>Copyright <a href="#" class="footer-footer-link ms-1">Cambodia Travel</a></span>
-               <span class="footer-footer-right"><i class="fa-regular fa-copyright"></i>Designed by Niset RUPP - G5, E8, Y4 Generation 23rd</span>
-            </div>
-         </div>
-         </div>
-      </footer>
       <script src="dist/js/script.js"></script>
       <script src="dist/js/bootstrap/bootstrap.bundle.min.js"></script>
    </body>
