--- a/Demo_aboutus.html
+++ b/Demo_aboutus.html
@@ -21,7 +21,7 @@
       <!-- <div class="se-pre-con"></div> -->
       <head>
    </head>
-   <body>
+   <body style="background-image: linear-gradient(#5421AC 0%, #FF1463 100%);">
       <!-- <div class="preloader">
          <div class="preloader_wrapper"></div>
       </div> -->
@@ -106,7 +106,7 @@
                   <p class="text-aboutus-title">ឈ្មោះ យន រីសា</p>
                   <p class="">អភិវឌ្ឍរទៅ លើផ្នែក ផេកមួយចំនួន</p>\
                </div>
-               <div class="text-aboutus">
+               <div class="text-aboutus" style="margin-bottom: 350px;">
                   <p class="text-aboutus-title">ឈ្មោះ លៀម លីសុផារ៉ា</p>
                   <p class="">អភិវឌ្ឍរទៅ លើផ្នែក ផេកមួយចំនួន</p>\
                </div>
