--- a/index.html
+++ b/index.html
@@ -328,48 +328,7 @@
         </p>
         <label class="right-show-more"> មើលបន្ថែម </label>
       </div>
-      <div class="list-foods row mt-4">
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">១</p>
-          <img src="images/food/ប្រហុកខ្ទិះ.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">ប្រហុកខ្ទិះ</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">២</p>
-          <img src="images/food/សម្លប្រហើរ.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លប្រហើរ</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៣</p>
-          <img src="images/food/សម្លកកូរ.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">សម្លកកូរ</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៤</p>
-          <img src="images/food/អាម៉ុក.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">អាម៉ុក</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៥</p>
-          <img src="images/food/បុកត្រប់ពុតលំញង.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">បុកត្រប់ពុតលំញង</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៦</p>
-          <img src="images/food/ជ្រក់ក្រៅឆ្នាំង.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">ជ្រក់ក្រៅឆ្នាំង</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៧</p>
-          <img src="images/food/ឆាអង្ក្រងសាច់គោ.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">ឆាអង្ក្រងសាច់គោ</p>
-        </div>
-        <div class="food col-12 col-md-4 col-lg-3">
-          <p class="food-in-province m-0 text-end">៨</p>
-          <img src="images/food/នំបញ្ចុក.jpeg" alt="" class="food-img" />
-          <p class="food-name m-0 text-center">នំបញ្ចុក</p>
-        </div>
-      </div>
+      <div class="list-foods row mt-4"></div>
     </div>
     <footer>
       <div class="container">
