--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
               ខេត្ត/តំបន់
               <div class="sub-menu-dropdown">
                 <ul>
+                  <!-- Why not like below command ?????? -->
+                  <!-- <li> <a href="ភ្នំពេញ.html">ភ្នំពេញ</a> </li> -->
+
                   <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
                   <a href="កំពត.html"><li>កំពត</li></a>
                   <a href="កែប.html"><li>កែប</li></a>
@@ -80,11 +83,11 @@
                 </ul>
               </div>
             </li>
-            <a href="សណ្ឋាគារ.html"><li>សណ្ឋាគារ</li></a>
+            <li><a href="សណ្ឋាគារ.html"  style="color:inherit; transition: none;">សណ្ឋាគារ</a></li>
             <li>រថយន្ត</li>
             <li>រថយន្តក្រុង</li>
-            <li>ជើងហោះហើរ</li>
-            <a href="#food-footer"><li>អាហារ</li></a>
+            <li> <a href="./flight_schedule.html"  style="color:inherit; transition: none;">ជើងហោះហើរ</a></li>
+            <li> <a href="#food-footer" style="color:inherit; transition: none;">អាហារ</a> </li>
           </ul>
         </div>
         <img id="angkor-logo" src="images/angkor_wat_logo.png" alt="Cambodia" />
