--- a/readmore.html
+++ b/readmore.html
@@ -22,9 +22,9 @@
     <head>
   </head>
   <body>
-    <div class="preloader">
+    <!-- <div class="preloader">
       <div class="preloader_wrapper"></div>
-    </div>
+    </div> -->
     <nav id="menu-navbar">
       <div id="navbar-content-wrapper">
         <div id="right-side-menu" class="d-flex justify-content-between align-items-center">
@@ -74,6 +74,7 @@
 <!--Content Post-->
   <div class="content-post container">
     <div class="row"> <!--Display flix-->
+      <div class="col-lg-12">
         <div class="description-1">
           <div class="img-content-wrap">
             <img class="img-content-post" src="./images/readme-pic.jpg">
@@ -103,6 +104,7 @@
             <p class="text-description"> - តាតៃ​(ខេត្ត​ កោះកុង)</p>
             <p class="text-description">រមណីដ្ឋាន​ តាតៃ កំពុងតែមានភាពភាពពេញនិយមពីភ្ញៀវជាតិនឹង អន្តរជាតិ ទៅទស្សនាកម្សាន្តនៅក្នុងពេលសម្រាកកាយរបស់ពួកគេ។​ វាមិនត្រឹមតែបានផ្តល់នូវភាពរីករាយប់ុណ្ណោះទេ ហើយវាបានធ្វើឲភ្ញៀវទេសចរណ៍ជាប់ចិត្ត និង ចងចាំទុកក្នុងចិត្តមិនអាចបំភ្លេចបាន។</p>
         </div>
+      </div>
     </div>
   </div>
   <footer>
